add a test for #1590
Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>
(cherry picked from commit db536c9957f23202c47b2bca8e171e382b891fb8)