@@ -34,6 +34,7 @@
         <spotbugs.exclude>${project.basedir}/exclude-runtime.xml</spotbugs.exclude>
         <argLine>
             --add-opens org.glassfish.jaxb.runtime/com.sun.xml.bind.v2=java.xml.bind
+            --add-opens org.glassfish.jaxb.runtime/com.sun.xml.bind.v2.runtime=java.xml.bind
             --add-opens org.glassfish.jaxb.runtime/com.sun.xml.bind.v2.schemagen=java.xml.bind
             --add-opens org.glassfish.jaxb.runtime/com.sun.xml.bind.v2.schemagen.xmlidref=java.xml.bind
             --add-opens java.base/java.lang=org.glassfish.jaxb.runtime
